tests/ui/borrowck/move-error-snippets.stderr
error[E0507]: cannot move out of static item `D`
  --> $DIR/move-error-snippets.rs:16:18
   |
LL |             aaa!(D);
   |                  ^ move occurs because `D` has type `A`, which does not implement the `Copy` trait
...
LL | sss!();
   | ------ in this macro invocation
   |
note: if `A` implemented `Clone`, you could clone the value
  --> $DIR/move-error-snippets.rs:9:1
   |
LL | struct A;
   | ^^^^^^^^ consider implementing `Clone` for this type
...
LL |             aaa!(D);
   |                  - you could clone this value
   = note: this error originates in the macro `sss` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing here
   |
LL |             aaa!(&D);
   |                  +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
